// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MemberOptionsMenu should not render menu if I am member 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should not render menu if person is owner 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should render menu if I am admin and person is not owner 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
    <Connect(withI18nextTranslation(MemberOptionsMenu))
      iAmAdmin={true}
      iAmOwner={false}
      myId="1"
      organization={
        Object {
          "id": "1234",
          "user_created": false,
        }
      }
      person={
        Object {
          "contact_count": 5,
          "full_name": "Full Name",
          "id": "123",
          "uncontacted_count": 3,
        }
      }
      personIsAdmin={false}
      personOrgPermission={
        Object {
          "id": "111",
          "permission_id": "4",
        }
      }
    />
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should render menu if person is me 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
    <Connect(withI18nextTranslation(MemberOptionsMenu))
      iAmAdmin={false}
      iAmOwner={false}
      myId="1"
      organization={
        Object {
          "id": "1234",
          "user_created": false,
        }
      }
      person={
        Object {
          "contact_count": 5,
          "full_name": "Full Name",
          "id": "1",
          "uncontacted_count": 3,
        }
      }
      personIsAdmin={false}
      personOrgPermission={
        Object {
          "id": "111",
          "permission_id": "4",
        }
      }
    />
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render 0 assigned 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          0 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render 0 uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render assigned and uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 14,
            }
          }
        >
          3 Uncontacted
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render no stage, admin permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Admin
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render no stage, member permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      />
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render no stage, owner permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Owner
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render stage, admin permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Uninterested
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Admin
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render stage, member permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Uninterested
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should render stage, owner permissions 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    justify="center"
    style={
      Object {
        "height": 50,
        "paddingLeft": 16,
        "paddingRight": 0,
        "paddingVertical": 10,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <ItemHeaderText
        text="Full Name"
      />
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Uninterested
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        />
        <MyText
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          Owner
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;
